# ASA-WG

./: .gitignore  ADA Evaluation Methodology v1.1.docx  ADA Scheme Overview v1.1.docx  ADA Security Test Lab Authorization v1.1.docx  ADA_Evaluation_Methodology.md  ADA_Scheme_Overview.md  ADA_Scheme_Overview_v1.1.md  ADA_Security_Test_Lab_Authorization.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
AI Profile/: AI Tool Specification.md
CASA/: ADA Burp Audit Scan Configuration.json  CASA Specification.md  CASA Test Guide.md
Cloud App and Config Profile/: Cloud App and Config Profile.md  Cloud App and Config Specification.md  Cloud App and Config Test Guide.md  Cloud Profile and Config Audit Summary.md
Desktop Profile/: Desktop App Specification.md  Desktop App Test Guide.md
MASA/: MASA Specification.md  MASA Test Guide.md
Meta Profile Extension/: Meta Platform Extension Specification.md  Meta Platform Extension Testing Guide.md
Mobile App Profile/: Mobile App Specification.md  Mobile App Test Guide.md  README.md
Submission Forms and Templates/: Cloud App and Config Developer Test Report.docx  Mobile App AL0 and AL1 Android Onboarding Questionnaire.xlsx  Mobile App AL0 and AL1 iOS Onboarding Questionnaire.xlsx  (+7 more)
cloud-assessment/: README.md  pyproject.toml  requirements.txt
cloud-assessment/ada_cloud_audit/: __init__.py  __main__.py  cli.py  models.py
cloud-assessment/ada_cloud_audit/checks/: base.py  registry.py
cloud-assessment/ada_cloud_audit/checks/aws/: account.py  compute.py  database.py  iam.py  logging.py  storage.py
cloud-assessment/ada_cloud_audit/checks/azure/: base.py  compute.py  database.py  databricks.py  identity.py  logging.py  networking.py  security.py  storage.py
cloud-assessment/ada_cloud_audit/checks/gcp/: __init__.py  base.py  bigquery.py  compute.py  database.py  iam.py  logging.py  networking.py  storage.py
cloud-assessment/ada_cloud_audit/report/: compliance_report.py  developer_report.py  json_report.py
cloud-assessment/tests/: conftest.py  test_docx_reports.py  test_report.py
cloud-assessment/tests/test_checks/test_aws/: test_account.py  test_compute.py  test_database.py  test_iam.py  test_logging.py  test_storage.py
cloud-assessment/tests/test_checks/test_azure/: conftest.py  test_compute.py  test_database.py  test_logging.py  test_networking.py  test_security.py  test_storage.py
cloud-assessment/tests/test_checks/test_gcp/: __init__.py  conftest.py  test_compute.py  test_database.py  test_iam.py  test_logging.py  test_networking.py  test_storage.py
(+28 files in other folders)
