[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-cloud-audit"
version = "0.1.0"
description = "ADA Cloud App and Config assessment automation tool"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.26.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.12.0",
    "azure-mgmt-authorization>=4.0",
    "azure-mgmt-batch>=17.0",
    "azure-mgmt-containerinstance>=10.0",
    "azure-mgmt-cosmosdb>=9.0",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-databricks>=2.0",
    "azure-mgmt-datafactory>=4.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-rdbms>=10.0",
    "azure-mgmt-redis>=14.0",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-security>=5.0",
    "azure-mgmt-sql>=4.0.0b1,<4.0.1",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-web>=7.0",
    "azure-keyvault-keys>=4.8",
    "azure-keyvault-secrets>=4.7",
    "msgraph-sdk>=1.0",
]
gcp = [
    "google-cloud-compute>=1.0",
    "google-cloud-storage>=2.0",
    "google-cloud-resource-manager>=1.0",
    "google-cloud-logging>=3.0",
    "google-cloud-monitoring>=2.0",
    "google-cloud-dns>=0.35",
    "google-cloud-functions>=1.0",
    "google-cloud-kms>=2.0",
    "google-cloud-asset>=3.0",
    "google-cloud-sqladmin>=0.1",
    "google-auth>=2.0",
    "google-cloud-essential-contacts>=0.1",
]
dev = [
    "pytest>=7.0",
    "moto[all]>=4.0",
]

[project.scripts]
ada-cloud-audit = "ada_cloud_audit.cli:main"
